Cambios datos en bruto

--- a/src/app/components/galeria/galeria.component.html
+++ b/src/app/components/galeria/galeria.component.html
@@ -8,6 +8,8 @@
             <div>
                 <span>
                     Nombre: {{empleado.name.first}} {{empleado.name.last}} <br>
+                    Género: {{empleado.gender}}<br>
+                    Raza: {{empleado.species}}
 
                 </span>
             </div>
