--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link" routerLink="personal">Empleados</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Link</a>
+                <a class="nav-link" routerLink="producto">Producto</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Link</a>
