--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,7 +1,12 @@
+<!-- Esto va igual ya que necesita validar 
+el formulario -->
 
 <form (ngSubmit)="guardar(formulario)" #formulario="ngForm">
-    <input type="text" placeholder="Ingrese nombre del producto" name="producto" [(ngModel)]="producto">
-    <input type="text" placeholder="Ingrese precio" name="precio" [(ngModel)]="precio">
+    <input type="text" placeholder="Ingrese nombre del producto" name="producto" [(ngModel)]="producto"
+    class="form-control">
+    <input type="text" placeholder="Ingrese precio" name="precio" 
+    [(ngModel)]="precio"
+    class="form-control">
 
-    <button type="submit">Guardar/enviar  </button>
+    <button type="submit" class="btn btn-primary">Guardar/enviar </button>
 </form>
