--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -1,3 +1,4 @@
-<h1>PRODUCTO</h1>
-
-<app-formulario></app-formulario>
+    <h1>PRODUCTOS</h1>
+    <app-formulario></app-formulario>
+    <hr>
+    <app-tabla2></app-tabla2>
