--- a/src/app/pages/producto/producto.component.html
+++ b/src/app/pages/producto/producto.component.html
@@ -1,4 +1,6 @@
+<div class="container">
     <h1>PRODUCTOS</h1>
     <app-formulario></app-formulario>
     <hr>
     <app-tabla2></app-tabla2>
+</div>
