cambios de api creada con el crud

--- a/src/app/components/tabla2/tabla2.component.html
+++ b/src/app/components/tabla2/tabla2.component.html
@@ -22,7 +22,7 @@
                         (click)="eliminar(producto.id)">
                         Eliminar
                     </button>
-                    <button class="btn btn-success">Actualizar</button>
+                    <button class="btn btn-success" [routerLink]="['/producto', producto.id]">Actualizar</button>
                 </td>
             </tr>
         }
